# strategy-runner

./: .gitignore  README.md  design.excalidraw  discussion.txt  first.bat  main.py  pyproject.toml  requirements.txt
manual-strategy/: swing_tradingview.py
notebooks/: pandas_experiment.ipynb
src/: main.py
src/config/: configs.py  engine_config.py  engine_configs.py  log_configs.py
src/db/: db.py
src/engiene/: candle_manager.py  engine.py  engine_config.py  event_queue.py  indicator_manager.py  market_watch_manager.py  strategy_manager.py  thread_signal_manager.py
src/engine/: engine.py  indicator_manager.py  market_watch_manager.py  strategy_manager.py
src/exchange/: binance.py  binance_exchange.py  coinbase_exchange.py  csv_exchange.py  exchange.py  mock_exchange.py  order_service.py  position_service.py  quote_service.py
src/indicators/: ema.py  indicator.py  rsi.py  sma.py
src/models/: candle.py  candle_update_detail.py  engine_config.py  enums.py  event.py  event_queue.py  market_watch.py  order_request.py  order_response.py  record.py  record_book.py  symbol_config.py
src/services/: market_watch_service.py  order_service.py  orderbook_service.py  position_service.py  quote_service.py
src/strategy/: strategy.py  swing_trading_strategy.py  trading_view_strategy.py
src/tests/: test_candle.py  test_np.py
src/utils/: market_watch_utils.py
tests/: sample.py  test_candle.py  test_cron_condition.py  test_datetime.py  test_df.py  test_event_queue.py  test_indicator_np.py  test_tick.py  test_timezone.py  test_unit.py  test_watcher.py
(+10 files in other folders)
