[tool.poetry]
name = "strategy-runner"
version = "0.1.0"
description = ""
authors = ["Arya <aryamishra.in@gmail.com>"]
readme = "README.md"
packages = [{include = "strategy_runner"}]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.6.3"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
